# short-url-generator

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  start_gunicorn.sh
.github/workflows/: ci.yml
links/: models.py  views.py
links/migrations/: 0001_initial.py  0002_alter_link_short_code.py  0003_alter_link_original_url.py
links/repositories/: link_repository.py
links/templates/links/: index.html
links/tests/: test_views.py
links/tests/use_cases/: test_create_short_url.py  test_get_all_urls.py  test_get_existing_url.py
links/use_cases/: create_short_url.py  get_all_urls.py  get_existing_url.py
url_shortener/: settings.py  urls.py
