[project]
name = "short-url-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "pyshorteners>=1.0.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]

[tool.black]
exclude = 'migrations'
