[project]
name = "short-url-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "gunicorn>=23.0.0",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "pyshorteners>=1.0.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]

[tool.black]
exclude = 'migrations'
line-length = 120

[tool.flake8]
max-line-length = 121
